# aura

./: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/constant/: mod.rs
src-tauri/src/migration/: create_task_table.rs  mod.rs
src-tauri/src/model/: mod.rs  prelude.rs  task.rs
src/assets/: style.css
src/components/: FocusTimerView.vue  MainView.vue  MiniView.vue  TaskCreateModal.vue  TaskListView.vue
